--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div class="slider">
         <input type="range" min="1" max="100" value="50" class="slider__input" />
         <img src="https://via.placeholder.com/300x300" class="slider__image" />
     </div>
+
+    <script type="module" src="./index.js"></script>
+    <script src="lodash.js"></script>
 </body>
 </html>
